# StripMaker

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md
cmake/: cli11.cmake  eigen3.cmake  nlohmannjson.cmake  pybind11.cmake  span-lite.cmake  spdlog.cmake  tbb.cmake
python/: environment.yml
python/core/: CMakeLists.txt  input.cpp  main.cpp
python/launching/: run_batch.py  run_pipeline.py  run_pipeline_secondary.py  run_prediction.py  run_preprocessing.py
python/learning/: cross_validate.py  failure_cat124.yml  failure_cat3.yml  feature_set.py  learning.py  measure.py  param_failures.yml  predict_cpp.py
python/utils/: async_utils.py  forest_to_c.py  util.py
python/visualization/: scap_to_png.py  scap_to_svg.py  scapio.py  svg_to_scap_width.py  svg_to_scap_width_exact.py  transfer_scap.py
src/: Capture2Input.cpp  Capture2Input.h  Logger.cpp  Logger.h  MainEndend.cpp  MainFeature.cpp  MainPreprocess.cpp  MainSample.cpp  MainSecondaryFeature.cpp  MainSecondarySample.cpp  MainSolve.cpp  MainStrokeStrip.cpp  MainUncutting.cpp  Util.cpp  Util.h
src/classifier/: forest.cpp  forest.h  forest_norm.cpp  forest_sec.cpp  forest_sec.h  forest_sec_norm.cpp
src/endpoint/: Junction.cpp  Junction.h  JunctionEndMerge.cpp  JunctionEndMerge.h  JunctionMatching.cpp  JunctionMatching.h  JunctionProposal.cpp  JunctionProposal.h  JunctionSeparation.cpp  JunctionSeparation.h  JunctionSerialization.cpp  JunctionSerialization.h
src/feature/: FeatureIO.cpp  FeatureIO.h  FeatureImplementations.cpp  FeatureImplementations.h  Features.cpp  Features.h  Filters.cpp  Filters.h  SecondaryFeatureImplementations.cpp  SecondaryFeatureImplementations.h  SingleFeatureImplementations.cpp  SingleFeatureImplementations.h
src/measure/: Measurement.cpp  Measurement.h
src/sample/: SampleFilters.cpp  SampleFilters.h  SampleGeneration.cpp  SampleGeneration.h  SampleSecondaryGeneration.cpp  SampleSecondaryGeneration.h
src/solve/: SolveEndMerge.cpp  SolveEndMerge.h  SolveEndSplit.cpp  SolveEndSplit.h  SolveLazy.cpp  SolveLazy.h  SolveUtil.cpp  SolveUtil.h
src/uncutting/: OutlierRemoval.cpp  OutlierRemoval.h  Uncutting.cpp  Uncutting.h
stroke_strip_src/: Cluster.cpp  Cluster.h  Context.cpp  Context.h  Fitting.cpp  Fitting.h  FittingEigenSparse.cpp  FittingEigenSparse.h  Parameterization.cpp  Parameterization.h  Polyline2D.h  Serialization.cpp  Serialization.h  SketchInfo.h  StrokeCutting.cpp  StrokeCutting.h  StrokeOrientation.cpp  StrokeOrientation.h  SvgUtils.h  Utils.cpp  Utils.h
